--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.UtcNow.Year - Aiursoft.ChessServer - <a asp-area="" asp-controller="Home" asp-action="Privacy">关于</a>
+            &copy; @DateTime.UtcNow.Year - Aiursoft.ChessServer
         </div>
     </footer>
     <script src="~/jquery/dist/jquery.min.js"></script>
