--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
         </div>
     </footer>
     <script src="~/jquery/dist/jquery.min.js"></script>
-    @* <script src="~/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
+    <script src="~/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
