--- a/src/Aiursoft.ChessServer/Views/Games/GetHtml.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Games/GetHtml.cshtml
@@ -1,16 +1,13 @@
 ﻿@model int
 
 @section Styles {
-    <link href="~/chessboardjs/css/chessboard-1.0.0.min.css" rel="stylesheet"/>
+    <link href="~/node_modules/@@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.css" rel="stylesheet" />
     <style>
         .hidden {
             display: none;
         }
     </style>
 }
-
-@* Make a responsible board based on bootstrap: (Avoid width with hardcode or overflow) *@
-@* <div id="board"></div> *@
 
 <div class="row">
     <div class="col-md-6">
@@ -25,8 +22,7 @@
 </div>
 
 @section Scripts {
-    <script type="module" src="~/chess.js/dist/esm/chess.js"></script>
-    <script src="~/chessboardjs/js/chessboard-1.0.0.js"></script>
+    <script type="module" src="~/node_modules/@@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.js"></script>
     <script type="module" src="~/site.js"></script>
     <script type="module">
         // Ask the user to enter w or b:
