--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aiursoft Chess Server</title>
-    <link rel="stylesheet" href="~/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/node_modules/bootstrap/dist/css/bootstrap.min.css" />
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
@@ -37,8 +37,8 @@
             &copy; @DateTime.UtcNow.Year - Aiursoft.ChessServer
         </div>
     </footer>
-    <script src="~/jquery/dist/jquery.min.js"></script>
-    <script src="~/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="~/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
