--- a/src/Aiursoft.ChessServer/Views/_ViewImports.cshtml
+++ b/src/Aiursoft.ChessServer/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Aiursoft.ChessServer
