--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -18,9 +18,15 @@
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    @* <li class="nav-item"> *@
-                    @*     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">关于</a> *@
-                    @* </li> *@
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="/">关于</a>
+                    </li>
+                </ul>
+                
+                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a title="Manage" id="player-nick-name" class="nav-link text-dark" href="#">未登录</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -40,5 +46,23 @@
 <script type="module" src="~/node_modules/jquery/dist/jquery.min.js" defer></script>
 <script type="module" src="~/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
 <script type="module" src="~/node_modules/@@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.js" defer></script>
+<script type="module">
+import { getUserName, changeName } from "/scripts/player.js";
+
+async function loadName() {
+    document.getElementById("player-nick-name").innerText = await getUserName();
+}
+
+async function promptChangeName() {
+    const newName = prompt("Please enter your new name:");
+    if (newName) {
+        changeName(newName);
+        await loadName();
+    }
+}
+
+await loadName();
+document.getElementById("player-nick-name").addEventListener("click", promptChangeName);
+</script>
 </body>
 </html>
