--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="~/node_modules/@@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.css" />
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100 pt-5">
     <header>
-        <nav class="navbar fixed-top navbar-expand-md">
+        <nav class="navbar fixed-top navbar-expand-md mb-3">
             <div class="container">
                 <a class="navbar-brand" href="https://www.aiursoft.cn">
                     Aiursoft
@@ -43,7 +43,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container mt-5">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
