--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                     <div class="form-inline">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
+                                <a class="nav-link" title="Manage" id="player-nick-name" href="#">未登录</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="https://gitlab.aiursoft.cn/aiursoft/chessserver">
                                     <i class="fab fa-gitlab"></i>
                                     View on GitLab
