More index features.

--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -2,69 +2,69 @@
 <html lang="en" class="h-100">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico"/>
     <title>Game - Aiursoft Chess Server</title>
-    <link rel="stylesheet" href="~/node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/node_modules/@@aiursoft/autodark.js/dist/css/autodark.min.css" />
-    <link rel="stylesheet" href="~/node_modules/@@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.css" />
+    <link rel="stylesheet" href="~/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="~/node_modules/@@aiursoft/autodark.js/dist/css/autodark.min.css"/>
+    <link rel="stylesheet" href="~/node_modules/@@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.css"/>
 </head>
 
 <body class="d-flex flex-column h-100 pt-5">
-    <header>
-        <nav class="navbar fixed-top navbar-expand-md mb-3">
-            <div class="container">
-                <a class="navbar-brand" href="https://www.aiursoft.cn">
-                    Aiursoft
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+<header>
+    <nav class="navbar fixed-top navbar-expand-md mb-3">
+        <div class="container">
+            <a class="navbar-brand" href="https://www.aiursoft.cn">
+                Aiursoft
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
                     aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">Chess</a>
+                    </li>
+                </ul>
+                <div class="form-inline">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">Chess</a>
+                        <li class="nav-item">
+                            <a class="nav-link" title="Manage" id="player-nick-name" href="#">未登录</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://gitlab.aiursoft.cn/aiursoft/chessserver">
+                                <i class="fab fa-gitlab"></i>
+                                View on GitLab
+                            </a>
                         </li>
                     </ul>
-                    <div class="form-inline">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" title="Manage" id="player-nick-name" href="#">未登录</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://gitlab.aiursoft.cn/aiursoft/chessserver">
-                                    <i class="fab fa-gitlab"></i>
-                                    View on GitLab
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </div>
-        </nav>
-    </header>
-    <div class="container mt-5">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="footer mt-auto py-3">
-        <div class="container">
-            &copy; @DateTime.UtcNow.Year - Aiursoft.ChessServer - <a
-                href="https://gitlab.aiursoft.cn/aiursoft/chessserver">GitLab</a>
         </div>
-    </footer>
+    </nav>
+</header>
 
-    <script type="module" src="~/node_modules/jquery/dist/jquery.min.js" defer></script>
-    <script type="module" src="~/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script type="module" src="~/node_modules/@@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.js" defer></script>
-    <script type="module" src="~/scripts/layout.js" defer></script>
-    @(await RenderSectionAsync("scripts", false))
+@RenderBody()
+
+<footer class="footer mt-auto py-3">
+    <div class="container">
+        &copy; @DateTime.UtcNow.Year - Aiursoft.ChessServer -
+        <a
+            href="https://gitlab.aiursoft.cn/aiursoft/chessserver">
+            GitLab
+        </a>
+    </div>
+</footer>
+
+<script type="module" src="~/node_modules/jquery/dist/jquery.min.js" defer></script>
+<script type="module" src="~/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
+<script type="module" src="~/node_modules/@@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.js" defer></script>
+<script type="module" src="~/scripts/layout.js" defer></script>
+@(await RenderSectionAsync("scripts", false))
 </body>
 
 </html>
