--- a/src/Aiursoft.ChessServer/Views/Home/Challenge.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Home/Challenge.cshtml
@@ -3,7 +3,7 @@
 
 <div class="jumbotron">
     <div class="container">
-        <h1 class="display-4">Waiting for joining...</h1>
+        <h1 class="display-4">Waiting for opponent joining...</h1>
         <p class="lead">Please share the link of this room to your friend!</p>
         @{
             var link = $"{Context.Request.Scheme}://{Context.Request.Host}/Home/{nameof(HomeController.Challenge)}/{Model.RoomId}";
