--- a/src/Aiursoft.ChessServer/Views/Games/GetHtml.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Games/GetHtml.cshtml
@@ -1,5 +1,10 @@
 ﻿@model int
 
-<div class="row">
-<vc:chess-board game-id="@Model"></vc:chess-board>
+<div class="container mt-5">
+    <main role="main" class="pb-3">
+        <div class="row">
+        <vc:chess-board game-id="@Model"></vc:chess-board>
+        </div>
+    </main>
 </div>
+
