--- a/src/Aiursoft.ChessServer/Views/Home/Create.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Home/Create.cshtml
@@ -1,4 +1,4 @@
-@model Aiursoft.ChessServer.Models.CreateChallengeViewModel
+@model Aiursoft.ChessServer.Models.ViewModels.CreateChallengeViewModel
 
 <div class="jumbotron">
     <div class="container">
