--- a/src/Aiursoft.ChessServer/Views/Home/Index.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Aiursoft.ChessServer.Models
-@model Aiursoft.ChessServer.Models.IndexViewModel
+@model Aiursoft.ChessServer.Models.ViewModels.IndexViewModel
 
 <div class="jumbotron">
     <div class="container">
