--- a/src/Aiursoft.ChessServer/Views/Shared/Components/ChessBoard/Default.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/Components/ChessBoard/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model Aiursoft.ChessServer.Views.Shared.Components.ChessBoardModel
+﻿@model Aiursoft.ChessServer.Views.Shared.Components.ChessBoard.ChessBoardModel
 
 
 <div class="col-md-6">
