--- a/src/Aiursoft.ChessServer/Views/Home/Challenge.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Home/Challenge.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Aiursoft.ChessServer.Controllers
-@model Aiursoft.ChessServer.Models.ChallengeViewModel
+@model Aiursoft.ChessServer.Models.ViewModels.ChallengeViewModel
 
 <div class="jumbotron">
     <div class="container">
