--- a/src/Aiursoft.ChessServer/Views/Home/Challenge.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Home/Challenge.cshtml
@@ -6,9 +6,9 @@
         <h1 class="display-4">Waiting for opponent joining...</h1>
         <p class="lead">Please share the link of this room to your friend!</p>
         @{
-            var link = $"{Context.Request.Scheme}://{Context.Request.Host}/Home/{nameof(HomeController.Challenge)}/{Model.RoomId}";
+            var link = $"{Context.Request.Scheme}://{Context.Request.Host}/Home/{nameof(HomeController.Challenge)}/{Model.ChallengeId}";
         }
-        <form asp-controller="Home" asp-action="DropChallenge" asp-route-id="@Model.RoomId" method="post" class="d-inline" asp-antiforgery="false">
+        <form asp-controller="Home" asp-action="DropChallenge" asp-route-id="@Model.ChallengeId" method="post" class="d-inline" asp-antiforgery="false">
             <div asp-validation-summary="All" class="text-danger"></div>
             <input type="hidden" name="playerId" value=""/>
             
@@ -41,5 +41,34 @@
                 trigger: 'click',
                 placement: 'bottom'
         });
+    </script>
+    <script type="module">
+        import { acceptChallenge, getUserId } from "/scripts/player.js";
+        
+        // Listen to the channel
+        const wsScheme = window.location.protocol === "https:" ? "wss://" : "ws://";
+        const socket = new WebSocket(
+            `${wsScheme}${window.location.host}/listen-challenge/${@Model.ChallengeId}.ws`
+        );
+        
+        socket.addEventListener('open', function (event) {
+            console.log('WebSocket is open now.');
+            
+            // Accept the challenge
+            acceptChallenge(@Model.ChallengeId, getUserId());
+        });
+
+        socket.onmessage = function (event) {
+            // alert(event.data);
+            // May get data like: game-started-at-{newGameId}
+            if (event.data.startsWith('game-started-at-')) {
+                const gameId = event.data.replace('game-started-at-', '');
+                const gameIdNumber = parseInt(gameId);
+                if (gameIdNumber) {
+                    window.location.href = `/games/${gameId}.html`;
+                }
+            }
+        };
+    
     </script>
 }
