Refactor and enhance chess game functionality
This commit adds enhancements and refactors existing logic in the chess game. The modifications convert single-player games into multiplayer, introducing logic for accepting and managing game challenges, and displaying player information. Changes include retrieving a player's color via a new API, switching to represent watch mode visually, and restructuring the challenge acceptance flow

--- a/src/Aiursoft.ChessServer/Views/Home/Challenge.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Home/Challenge.cshtml
@@ -55,16 +55,14 @@
             console.log('WebSocket is open now.');
             
             // Accept the challenge
-            acceptChallenge(@Model.ChallengeId, getUserId());
+            acceptChallenge(@Model.ChallengeId);
         });
 
         socket.onmessage = function (event) {
-            // alert(event.data);
-            // May get data like: game-started-at-{newGameId}
-            if (event.data.startsWith('game-started-at-')) {
-                const gameId = event.data.replace('game-started-at-', '');
-                const gameIdNumber = parseInt(gameId);
-                if (gameIdNumber) {
+            // May get data like: game-started
+            if (event.data.startsWith('game-started')) {
+                const gameId = @Model.ChallengeId;
+                if (gameId) {
                     window.location.href = `/games/${gameId}.html`;
                 }
             }
