--- a/src/Aiursoft.ChessServer/Views/Shared/Components/ChessBoard/Default.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/Components/ChessBoard/Default.cshtml
@@ -1,21 +1,20 @@
 ﻿@model Aiursoft.ChessServer.Views.Shared.Components.ChessBoard.ChessBoardModel
 
-
-<div class="col-md-6">
-    <div id="board" style="width: 100%" class="w-100"></div>
-</div>
-<div class="col-md-12">
-    <p id="status" class="text-center text-wrap text-primary mt-1"></p>
-</div>
-
+<div id="board" style="width: 100%" class="w-100"></div>
+<p id="status" class="text-center text-wrap text-primary mt-3"></p>
+<p id="role" class="text-center text-wrap text-secondary mt-1"></p>
 
 <script type="module">
 import initGameBoard from "/scripts/chessboard.js";
+import { getUserId, getPlayerColor } from "/scripts/player.js";
 
 window.addEventListener('DOMContentLoaded', async () => {
     // Ask the user to enter w or b:
-    const player = prompt("Please enter your color (w or b):");
-    initGameBoard(player, @Model.GameId);
+    //const player = prompt("Please enter your color (w or b):");
+
+    var playerId = getUserId();
+    var playerColor = await getPlayerColor(@Model.GameId);
+    initGameBoard(playerColor, playerId, @Model.GameId);
 });
 
 </script>
