--- a/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
+++ b/src/Aiursoft.ChessServer/Views/Shared/_Layout.cshtml
@@ -26,19 +26,22 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index">Chess</a>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">Rooms</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="Watch">Watch</a>
                     </li>
                 </ul>
                 <div class="form-inline">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" title="Manage" id="player-nick-name" href="#">未登录</a>
+                            <a class="nav-link" title="Manage" id="player-nick-name" href="#">Player name</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://gitlab.aiursoft.cn/aiursoft/chessserver">
                                 <i class="fab fa-gitlab"></i>
-                                View on GitLab
+                                Source Code
                             </a>
                         </li>
                     </ul>
